about us responsiveness added

--- a/res/about.html
+++ b/res/about.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mb-3">
     <div class="row">
-    <div class="card text-center col">
+    <div class="card text-center col col-sm-6">
         <div class="card-header bg-primary text-light">
           Krishna Vachan
         </div>
@@ -9,14 +9,14 @@
           <p class="card-text">The Bhagwat Gita is a sacred text that teaches us how to live a meaningful and fulfilling life. It is a dialogue between Arjuna, a warrior prince, and Krishna, the Supreme Lord, who guides him through his doubts and dilemmas on the battlefield of Kurukshetra. The Bhagwat Gita offers various perspectives on life</p>
         </div>
       </div>
-    <div class="col">
+    <div class="col-0 col-sm-6">
 
     </div>
     </div>
 
     <div class="row">
-        <div class="col"></div>
-      <div class="card text-center col">
+        <div class="col-0 col-sm-6"></div>
+      <div class="card text-center col col col-sm-6">
         <div class="card-header bg-secondary text-light">
           Krishna Vachan
         </div>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row">
-      <div class="card text-center col">
+      <div class="card text-center col col col-sm-6">
         <div class="card-header bg-primary text-light">
            Krishna Vachan
         </div>
@@ -39,12 +39,12 @@
         </div>
         
       </div>
-      <div class="col"></div>
+      <div class="col-0 col-sm-6"></div>
     </div>
       
     <div class="row">
-        <div class="col"></div>
-      <div class="card text-center col">
+        <div class="col-0 col-sm-6"></div>
+      <div class="card text-center cols col-sm-6">
         <div class="card-header bg-secondary text-light">
           Krishna Vachan
         </div>
