DIV SIZE CHANGED AT HOME

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             $(".chapters_container").html(obj.map((val,i)=>{
             return `
         
-        <div class="card mb-3 mx-2 p-2" style="max-width: 540px; border-color:gray;">
+        <div class="card mb-3 mx-2 p-2 col-11 col-sm-6" style="max-width: 540px; border-color:gray;">
   <div class="row no-gutters">
     <div class="col-md-4 border">
       <img src="res/logo.jpg" class="card-img" alt="...">
