--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bhagwat Geeta</title>
+    <title>Bhagavad Gita</title>
     <link rel="shortcut icon" href="res/logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -18,7 +18,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <img src="res/logo.webp" width="30" height="30" class="d-inline-block align-text-top" alt="">
-          <span>Shreemad Bhagwat Geeta</span>
+          <span>Shreemad Bhagavad Gita</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
