--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
 <body>
+                                     
     <!-- Image and text -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -45,7 +46,13 @@
 
   </div> -->
 
-  <div id="mainContainer" class="container mt-5"></div>
+  <div id="mainContainer" class="container mt-5">
+    <div id="loading" style="width:100%; display:block;">
+      <div class="spinner-border d-block m-auto" role="status">
+      </div>
+      <div class=" text-center fw-bold">Loading...</div>
+      </div>
+  </div>
 
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
@@ -90,7 +97,6 @@
 </div>`
 
         }))
-
         callBack()
     }
 
