Added Some transitions

--- a/res/contact.html
+++ b/res/contact.html
@@ -15,15 +15,17 @@
 <hr>
     <div class="container-fluid my-3">
         <div class="text-center fs-2 mb-2 bg-dark text-white relative-top">Vinay Koshti</div>
+
+        <div class="text-justified" style="line-height: 38px; font-size: large;"> Contact Us </div>
         <div class="text-justified" style="line-height: 38px; font-size: large;">Adaptable web developer skilled in <b>PHP for backend work and familiar with frontend technologies like HTML,
             CSS, JavaScript, jQuery, and AJAX</b>. Can create interactive and user-friendly websites by combining <u style="font-weight: bold;">backend
             expertise with frontend design</u>. Detail-oriented and committed to delivering top-notch solutions</div>
     </div>
     <div class="row bg-dark text-light relative-bottom p-2">
-        <div class="col text-center"><a target="_blank" href="https://github.com/Vinayrk2"><i class="fa-brands fa-github"></i> VINAY-KOSHTI</a></div>
-        <div class="col text-center"> <a target="_blank" href="mailto:vinaykoshti02@gmail.com"><i class="fa-solid fa-envelope"></i> Contact via Mail</a></div>
-        <div class="col text-center"> <a target="_blank" href="https://wa.me/+919974591318"><i class="fa-brands fa-whatsapp"></i> Whatsapp</a></div>
-        <div class="col text-center"> <a target="_blank" href="https://www.linkedin.com/in/vinay-kumar-6550ba265/"><i class="fa-brands fa-linkedin"></i> Linkedin</a></div>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="https://github.com/Vinayrk2"><div class=" text-center"> <i class="fs-5 fa-brands fa-github"></i></div></a>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="mailto:vinaykoshti02@gmail.com"><div class=" text-center"> <i class="fs-5 fa-solid fa-envelope"></i></div></a>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="https://wa.me/+919974591318"><div class=" text-center"> <i class="fs-5 fa-brands fa-whatsapp"></i></div></a>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="https://www.linkedin.com/in/vinay-kumar-6550ba265/"><div class=" text-center"> <i class="fs-5 fa-brands fa-linkedin"></i></div></a>
         
     </div>
 </div>
