--- a/res/about.html
+++ b/res/about.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mb-3">
     <div class="row">
-    <div class="card text-center col col-sm-6">
+    <div class="card text-center col col-sm-6 aboutCard mb-3">
         <div class="card-header bg-primary text-light">
           Krishna Vachan
         </div>
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-0 col-sm-6"></div>
-      <div class="card text-center col col col-sm-6">
+      <div class="card text-center col col col-sm-6 aboutCard mb-3">
         <div class="card-header bg-secondary text-light">
           Krishna Vachan
         </div>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row">
-      <div class="card text-center col col col-sm-6">
+      <div class="card text-center col col col-sm-6 aboutCard mb-3">
         <div class="card-header bg-primary text-light">
            Krishna Vachan
         </div>
@@ -44,7 +44,7 @@
       
     <div class="row">
         <div class="col-0 col-sm-6"></div>
-      <div class="card text-center cols col-sm-6">
+      <div class="card text-center cols col-sm-6 aboutCard mb-3">
         <div class="card-header bg-secondary text-light">
           Krishna Vachan
         </div>
@@ -56,3 +56,5 @@
       </div>
     </div>
 </div>
+
+<div class=" bg-dark text-light text-center text-primary fw-bold py-2"> - bhagwatgeeta - </div>
