--- a/res/contact.html
+++ b/res/contact.html
@@ -14,18 +14,19 @@
     </div> -->
 <hr>
     <div class="container-fluid my-3">
-        <div class="text-center fs-2 mb-2 bg-dark text-white relative-top">Vinay Koshti</div>
+        <div class="text-center fs-2 mb-2 bg-dark text-white relative-top" title="LJIET - 23002171220005">Vinay Koshti</div>
 
-        <div class="text-justified" style="line-height: 38px; font-size: large;"> Contact Us </div>
+        <div class="text-justified" style="line-height: 38px; font-size: large;"> Contact Us,  </div>
+        <div class="text-justified" style="line-height: 38px; font-size: large;"> LJIET - 23002171220005 </div>
         <div class="text-justified" style="line-height: 38px; font-size: large;">Adaptable web developer skilled in <b>PHP for backend work and familiar with frontend technologies like HTML,
             CSS, JavaScript, jQuery, and AJAX</b>. Can create interactive and user-friendly websites by combining <u style="font-weight: bold;">backend
             expertise with frontend design</u>. Detail-oriented and committed to delivering top-notch solutions</div>
     </div>
     <div class="row bg-dark text-light relative-bottom p-2">
-        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="https://github.com/Vinayrk2"><div class=" text-center"> <i class="fs-5 fa-brands fa-github"></i></div></a>
-        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="mailto:vinaykoshti02@gmail.com"><div class=" text-center"> <i class="fs-5 fa-solid fa-envelope"></i></div></a>
-        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="https://wa.me/+919974591318"><div class=" text-center"> <i class="fs-5 fa-brands fa-whatsapp"></i></div></a>
-        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " href="https://www.linkedin.com/in/vinay-kumar-6550ba265/"><div class=" text-center"> <i class="fs-5 fa-brands fa-linkedin"></i></div></a>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " title="Github" href="https://github.com/Vinayrk2"><div class=" text-center"> <i class="fs-5 fa-brands fa-github"></i></div></a>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " title="Email" href="mailto:vinaykoshti02@gmail.com"><div class=" text-center"> <i class="fs-5 fa-solid fa-envelope"></i></div></a>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " title="Whatsapp" href="https://wa.me/+919974591318"><div class=" text-center"> <i class="fs-5 fa-brands fa-whatsapp"></i></div></a>
+        <a target="_blank" class="col-6 col-sm-3 btn btn-dark " title="LinkedIn" href="https://www.linkedin.com/in/vinay-kumar-6550ba265/"><div class=" text-center"> <i class="fs-5 fa-brands fa-linkedin"></i></div></a>
         
     </div>
 </div>
