--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           $(".chapters_container").html(obj.map((val,i)=>{
             return `
           
-        <div class="card mb-5 mx-5 p-2 col-11 col-sm-6" style="max-width: 540px; border-color:gray;" title="${val.name}" onclick="redirectPage('/?page=chapter&chapter=${val.chapter_number}')">
+        <div class="card mb-5 mx-5 p-2 col-sm-6" style="max-width: 540px; border-color:gray;" title="${val.name}" onclick="redirectPage('/?page=chapter&chapter=${val.chapter_number}')">
   <div class="row no-gutters">
     <div class="col-md-4 border">
       <img src="res/images/${val.chapter_number}.jpg" class="card-img" alt="...">
