--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <style>
       html {
         height: 100%;
-        zoom:90%;
       }
       
 
@@ -165,6 +164,9 @@
             }
         };
 
+        window.addEventListener('DOMContentLoaded',()=>{
+          document.body.style.zoom = '90%';
+        })
 
 
         
