--- a/res/contact.html
+++ b/res/contact.html
@@ -21,6 +21,15 @@
         <div class="text-justified" style="line-height: 38px; font-size: large;">Adaptable web developer skilled in <b>PHP for backend work and familiar with frontend technologies like HTML,
             CSS, JavaScript, jQuery, and AJAX</b>. Can create interactive and user-friendly websites by combining <u style="font-weight: bold;">backend
             expertise with frontend design</u>. Detail-oriented and committed to delivering top-notch solutions</div>
+
+        <div class="container my-3">
+            <h3> Other Projects </h3>
+            <ul>
+                <li> <b> HinduVidhyapith : <a href="https://hinduvidhyapith.netlify.app/" target="_blank">https://hinduvidhyapith.netlify.app/</a></b></li>
+                <li> Mine Game : <a href="https://vinayrk2.github.io/mineGame.github.io/" target="_blank">https://vinayrk2.github.io/mineGame.github.io/</a></li>
+                <li> MovieHub : <a href="https://vinayrk2.github.io/moviehub.github.io/" target="_blank">https://vinayrk2.github.io/moviehub.github.io/</a></li>
+            </ul>
+        </div>
     </div>
     <div class="row bg-dark text-light relative-bottom p-2">
         <a target="_blank" class="col-6 col-sm-3 btn btn-dark " title="Github" href="https://github.com/Vinayrk2"><div class=" text-center"> <i class="fs-5 fa-brands fa-github"></i></div></a>
